# dbt-cratedb2

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  README.md  pyproject.toml
.github/: compose.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  regression-report.yml
.github/workflows/: code-quality.yml  integration-tests.yml  release.yml  release_prep_hatch.yml  unit-tests.yml
dbt/adapters/cratedb/: __init__.py  __version__.py  column.py  connections.py  impl.py  relation.py
dbt/adapters/cratedb/record/: __init__.py  handle.py
dbt/adapters/cratedb/record/cursor/: cursor.py
dbt/adapters/cratedb/relation_configs/: __init__.py  constants.py  materialized_view.py
dbt/adapters/postgres/: connections.py  impl.py
dbt/include/cratedb/macros/: adapters.sql  catalog.sql  relations.sql  timestamps.sql
dbt/include/cratedb/macros/materializations/: incremental_strategies.sql  snapshot_merge.sql
dbt/include/cratedb/macros/relations/materialized_view/: alter.sql  create.sql  describe.sql  drop.sql  refresh.sql  rename.sql
dbt/include/cratedb/macros/relations/table/: drop.sql  rename.sql  replace.sql
dbt/include/cratedb/macros/relations/view/: drop.sql  rename.sql  replace.sql
dbt/include/cratedb/macros/utils/: any_value.sql  dateadd.sql  datediff.sql  last_day.sql  listagg.sql  split_part.sql
dbt/include/postgres/macros/materializations/: incremental_strategies.sql
dbt/include/postgres/macros/relations/materialized_view/: drop.sql
dbt/include/postgres/macros/relations/table/: drop.sql
docker/: Dockerfile  README.md  dev.Dockerfile
docs/: backlog.md  psycopg2.md
tests/functional/: conftest.py  test_analyses.py  test_catalog.py  test_config.py  test_connection_manager.py  test_default_selectors.py  test_external_reference.py  test_multiple_indexes.py  test_relation_name.py  test_store_test_failures.py  test_thread_count.py  test_timezones.py  test_unlogged_table.py
tests/functional/adapter/: test_basic.py  test_concurrency.py  test_constraints.py  test_cratedb.py  test_data_types.py  test_empty.py  test_ephemeral.py  test_grants.py  test_incremental.py  test_incremental_microbatch.py  test_persist_docs.py  test_query_comment.py  test_relations.py  test_show.py  test_simple_copy.py  test_simple_snapshot.py  test_store_test_failures.py  test_unit_testing.py  test_utils.py
tests/functional/adapter/test_hooks/: test_hooks.py
tests/functional/adapter/test_simple_seed/: test_simple_seed.py
tests/functional/basic/: test_mixed_case_db.py  test_simple_reference.py  test_varchar_widening.py
tests/functional/basic/data/: varchar10_seed.sql  varchar300_seed.sql
tests/functional/contracts/: test_contract_precision.py  test_nonstandard_data_type.py
tests/functional/custom_aliases/: fixtures.py
tests/functional/custom_singular_tests/: test_custom_singular_tests.py
tests/functional/dbt_debug/: test_dbt_debug.py
tests/functional/exit_codes/: test_exit_codes.py
tests/functional/exposures/: test_exposure_configs.py  test_exposures.py
tests/functional/graph_selection/: test_graph_selection.py  test_schema_test_graph_selection.py
tests/functional/incremental_schema_tests/: test_incremental_schema.py
tests/functional/invalid_model_tests/: test_invalid_models.py
tests/functional/macros/: fixtures.py  test_macros.py
tests/functional/materializations/: conftest.py
tests/functional/materializations/materialized_view_tests/: test_materialized_view.py  test_postgres_materialized_view.py  utils.py
tests/functional/postgres/: test_indexes.py
tests/functional/projects/jaffle_shop/data/: raw_orders.csv
tests/functional/retry/: fixtures.py  test_retry.py
tests/functional/run_operations/: test_run_operations.py
tests/functional/schema/: test_custom_schema.py
tests/functional/schema/fixtures/: sql.py
tests/functional/selected_resources/: test_selected_resources.py
tests/functional/semantic_models/: test_semantic_model_parsing.py
tests/functional/show/: test_show.py
tests/functional/sources/: fixtures.py  test_simple_source.py  test_source_configs.py  test_source_fresher_state.py  test_source_freshness.py
tests/functional/statements/: test_statements.py
tests/functional/unit_testing/: test_state.py  test_unit_testing.py
tests/unit/: test_adapter.py  test_adapter_conversions.py  test_connection.py  test_filter_catalog.py  test_materialized_view.py  test_renamed_relations.py
