[project]
dynamic = ["version"]
name = "dbt-cratedb2"
description = "dbt adapter for CrateDB 5.x, derived from dbt-postgres"
readme = "README.md"
keywords = ["dbt", "adapter", "cratedb", "adapters", "database", "elt", "dbt-core", "dbt-adapter", "postgresql"]
requires-python = ">=3.9.0"
authors = [
    { name = "Crate.io", email = "office@crate.io" },
]
maintainers = [
    { name = "Crate.io", email = "office@crate.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg2-binary>=2.9,<3.0",
    "dbt-adapters>=1.7.0,<2.0",
    # add dbt-core to ensure backwards compatibility of installation, this is not a functional dependency
    "dbt-core>=1.8.0",
    # installed via dbt-adapters but used directly
    "dbt-common>=1.0.4,<2.0",
    # "dbt-postgres==1.9.0b1",
    "agate>=1.0,<2.0",
]
[project.urls]
Homepage = "https://github.com/crate-workbench/dbt-cratedb2"
Documentation = "https://dbt-cratedb2.readthedocs.io/"
Repository = "https://github.com/crate-workbench/dbt-cratedb2.git"
Issues = "https://github.com/crate-workbench/dbt-cratedb2/issues"
Changelog = "https://github.com/crate-workbench/dbt-cratedb2/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["dbt"]

[tool.hatch.build.targets.wheel]
packages = ["dbt"]

[tool.hatch.version]
path = "dbt/adapters/postgres/__version__.py"

[tool.hatch.envs.default]
dependencies = [
    "dbt-adapters @ git+https://github.com/dbt-labs/dbt-adapters.git",
    "dbt-common @ git+https://github.com/dbt-labs/dbt-common.git",
    "dbt-tests-adapter @ git+https://github.com/dbt-labs/dbt-adapters.git#subdirectory=dbt-tests-adapter",
    "dbt-core @ git+https://github.com/dbt-labs/dbt-core.git#subdirectory=core",
    "pre-commit==3.7.0",
    "freezegun",
    "pytest",
    "pytest-dotenv",
    "pytest-mock",
    "pytest-xdist",
]
[tool.hatch.envs.default.env-vars]
DBT_TEST_USER_1 = "dbt_test_user_1"
DBT_TEST_USER_2 = "dbt_test_user_2"
DBT_TEST_USER_3 = "dbt_test_user_3"
[tool.hatch.envs.default.scripts]
setup = "pre-commit install"
code-quality = "pre-commit run --all-files"
unit-tests = "python -m pytest -vvv {args:tests/unit}"
integration-tests = "python -m pytest -vvv {args:tests/functional}"
docker-dev = [
    "echo Does not support integration testing, only development and unit testing. See issue https://github.com/dbt-labs/dbt-postgres/issues/99",
	"docker build -f docker/dev.Dockerfile -t dbt-cratedb2-dev .",
	"docker run --rm -it --name dbt-cratedb2-dev -v $(pwd):/opt/code dbt-cratedb2-dev",
]
docker-prod = "docker build -f docker/Dockerfile -t dbt-cratedb2 ."

[tool.hatch.envs.build]
detached = true
dependencies = [
    "wheel",
    "twine",
    "check-wheel-contents",
]
[tool.hatch.envs.build.scripts]
check-all = [
    "- check-wheel",
    "- check-sdist",
]
check-wheel = [
    "twine check dist/*",
    "find ./dist/dbt_postgres-*.whl -maxdepth 1 -type f | xargs python -m pip install --force-reinstall --find-links=dist/",
    "pip freeze | grep dbt-cratedb2",
]
check-sdist = [
    "check-wheel-contents dist/*.whl --ignore W007,W008",
    "find ./dist/dbt_postgres-*.gz -maxdepth 1 -type f | xargs python -m pip install --force-reinstall --find-links=dist/",
    "pip freeze | grep dbt-cratedb2",
]

[tool.pytest]
env_files = ["test.env"]
testpaths = [
    "tests/functional",
    "tests/unit",
]
